-
Bug
-
Resolution: Done
-
P1: Critical
-
5.4.0
-
None
-
Ubuntu 14.04
-
f64b87a5df8870be138dbf3febad950e1fc4ed8c
Easiest to reproduce with a dual monitor Xinerama setup with one 4K monitor: Using any widget-based application, try to resize the window to cover both screens.
It crashes after a warning of the type "QXcbShmImage: shmget() failed (22) for size 35101960 (4159x2110)".
The problem is that we are trying to allocate a backingstore that is bigger than the maximum shared memory size on Linux.